[tool.poetry]
name = "boto3-utils"
version = "1.1.2"
description = "Utilidades para trabajar con Boto3"
authors = ["Adrian Carreno <adriancarreno.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.116"
boto3-stubs = "^1.34.116"
botocore = "^1.34.116"
botocore-stubs = "^1.34.94"
mypy-boto3-s3 = "^1.34.105"
mypy-boto3-secretsmanager = "^1.34.109"
mypy-boto3-stepfunctions = "^1.34.92"
poetry2setup = "^1.1.0"
setuptools = "^70.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
ruff = "^0.2.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.4.3"
moto = "^5.0.2"
pytest = "^8.0.2"

[tool.ruff]
exclude = ["setup.py"]

[tool.ruff.lint]
# Go to https://docs.astral.sh/ruff/rules/ to see all the available rules
select = ["F", "E", "W", "I", "N", "C90", "ARG"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG002"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["boto3_utils"]

[tool.coverage.report]
omit = ["__init__.py"]
fail_under = 95
precision = 2
