# -------------------------------- UV settings ------------------------------- #

[project]
name = "boto3-utils"
version = "1.3.1"
description = "Utilidades para trabajar con Boto3"
readme = "README.md"
authors = [
    { name = "Adrian Carreno", email = "AdrianCarreno@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.12",
    "boto3-stubs>=1.37.12",
    "mypy-boto3-s3>=1.37.0",
    "mypy-boto3-secretsmanager>=1.37.0",
    "mypy-boto3-stepfunctions>=1.37.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["ipython>=8.34.0", "ruff>=0.10.0"]
test = ["moto>=5.1.1", "pytest>=8.3.5", "pytest-cov>=6.0.0"]

# ------------------------------- Ruff settings ------------------------------ #

[tool.ruff.lint]
# Go to https://docs.astral.sh/ruff/rules/ to see all the available rules
select = ["F", "E", "W", "I", "N", "C90", "ARG"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
force-single-line = true

# ------------------------------ Pytest settings ----------------------------- #

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 95
precision = 2
